<resources>
    <string name="app_name">HBTC Wallet</string>
    <string name="exit_app">再次点击退出应用</string>
    <string name="action_done">完成</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="import_auth_code">输入验证码</string>
    <string name="resend">重新发送</string>
    <string name="app_no_data">暂无记录</string>
    <string name="http_loading">数据请求中</string>
    <string name="app_try_again">暂无数据，点击重试</string>
    <string name="net_error_msg">网络异常</string>
    <string name="app_net_error_msg">网络不给力</string>
    <string name="app_net_error_msg_check">请检查网络设置后重新加载</string>
    <string name="auth_info_faild">当前登录信息过期,请重新登录</string>
    <string name="error_network_later_try">网络异常，请稍后再试</string>
    <string name="traffic_network_later_try">网络拥堵，请稍后再试</string>
    <string name="error_network_time_out">请求超时</string>
    <string name="keystore_or_pwd_nomatch">KeyStore或密码不匹配</string>
    <string name="app_account_language">语言</string>
    <string name="language_setting">语言设置</string>
    <string name="wallet_create_trusteeship">创建账户</string>
    <string name="create_wallet_account">创建钱包账户</string>
    <string name="wallet_import_trusteeship">导入账户</string>
    <string name="wallet_create">开始创建</string>
    <string name="at_once_backup">立即备份</string>
    <string name="later_backup">稍后备份</string>
    <string name="password_create_success">新钱包创建成功</string>
    <string name="backup_nnemonic">备份助记词</string>
    <string name="backup_nnemonic_tips">请务必牢记并妥善保管这12个单词,一旦遗失，您的资产将无法找回</string>
    <string name="verify_nnemonic">验证助记词</string>
    <string name="start_backup">开始备份</string>
    <string name="tab_balance_title">资产</string>
    <string name="tab_validator">验证人</string>
    <string name="tab_market">市场</string>
    <string name="tab_trade">交易</string>
    <string name="tab_change_title">兑换</string>
    <string name="tab_order_title">订单</string>
    <string name="tab_my_title">我的</string>
    <string name="service_agreement">服务协议</string>
    <string name="agreement_index_1">您必须阅读并接受我们的隐私条款才能继续</string>
    <string name="agreement_context">勿通过邮箱、通讯工具发送您的助记词记词轻易告知他人 请勿通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘通过邮箱、通讯工具发送您的助记词的助记词 易告知通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘中过邮箱、通讯工具发送您的助记将您的助记词轻易告知他通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘请勿通过邮箱、通讯工具发送您的助记勿将您的助记词轻易告知通过截屏、照相等方式保存于您的移动设备中请勿将助记词 勿通过邮箱、通讯工具发送您的助记词记词轻易告知他人 请勿通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘通过邮箱、通讯工具发送您的助记词的助记词轻易告知通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘中过邮箱、通讯工具发送您的助记将您的助记词轻易告知他通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘请 移动设备中请勿将助记词已文档的保存于您的硬盘、网盘中过邮箱、通讯工具发送您的助记将您的助记词轻易告知他通过截屏、照相等方式保存于您的移动设备中请勿将助记词已文档的保存于您的硬盘、网盘请</string>
    <string name="confirm">确认</string>
    <string name="import_mnemonic_tips">请输入12位助记词已恢复帐户,用空格分隔</string>
    <string name="import_mnemonic">导入助记词</string>
    <string name="mnemonic_input_hint">输入助记词,用空格分隔</string>
    <string name="verify">验证</string>
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="next">下一步</string>
    <string name="close">关闭</string>
    <string name="set_password">设置密码</string>
    <string name="setup_1_to_3">(第1步，共3步)</string>
    <string name="setup_2_to_3">(第2步，共3步)</string>
    <string name="setup_3_to_3">(第3步，共3步)</string>
    <string name="set_pwd_tip_1">·安全密码是保护钱包私钥和操作资产的重要凭证</string>
    <string name="set_pwd_tip_2">·HBTC Wallet钱包不会缓存、上传、存储您的密码</string>
    <string name="set_pwd_tip_3">·请务必妥善保管密码</string>
    <string name="set_pwd_alarm_1">·安全密码是保护钱包私钥和操作资产的重要凭证,非常重要</string>
    <string name="set_pwd_alarm_2"> ·HBTC钱包不会缓存，上传，存储您的密码，也无法帮您找回，请务必牢记并妥善保管您的密码.</string>
    <string name="set_pwd_hint">请设置钱包密码(6位数字)</string>
    <string name="pwd_index">%1$d个字符</string>
    <string name="pwd_rule_tip">为了保证您的资产安全，密码请包括：</string>
    <string name="pwd_rule_tip_1">·1个大写字母</string>
    <string name="pwd_rule_tip_2">·1个小写字母</string>
    <string name="pwd_rule_tip_3">·1个数字</string>
    <string name="pwd_rule_tip_4">·至少8位字符</string>
    <string name="set_username_tip">您正在创建HBTC Wallet钱包的账户，并将拥有一份跨链钱包</string>
    <string name="tips_secure">安全提醒</string>
    <string name="tips_secure_index_1">助记词可用于：</string>
    <string name="tips_secure_index_2">恢复钱包下的钱包资产</string>
    <string name="tips_secure_index_3">防止忘记密码</string>
    <string name="tips_secure_index_4">应用删除、手机丢失</string>
    <string name="tips_secure_index_5">等情况导致的资产损失</string>
    <string name="confirm_password">重复密码</string>
    <string name="trusteeship_manger">管理账户</string>
    <string name="my_trusteeship">我的账户</string>
    <string name="str_default">默认</string>
    <string name="set_name">设置名称</string>
    <string name="please_be_sure">请务必</string>
    <string name="delete">删除</string>
    <string name="error_password">密码错误</string>
    <string name="import_private_key">导入私钥</string>
    <string name="hint_private_key_input">请输入私钥</string>
    <string name="transfer">转账</string>
    <string name="transfer2">转账</string>
    <string name="confrim_transfer">确认转账</string>
    <string name="un_transfer">取消转账</string>
    <string name="make_collection">收款</string>
    <string name="cancel">取消</string>
    <string name="copyed">已复制</string>
    <string name="wallet_password">钱包密码</string>
    <string name="hint_import_way">请选择导入方式</string>
    <string name="import_keystore">导入Keystore</string>
    <string name="string_import">导入</string>
    <string name="bh_register_agreement">我已阅读并同意《HBTC Wallet服务协议》</string>
    <string name="bh_register_agreement_sub">HBTC Wallet服务协议</string>
    <string name="copy_address">复制地址</string>
    <string name="transfer_in">收款</string>
    <string name="draw_coin">提币</string>
    <string name="hint_input_copy_address">输入或粘贴地址</string>
    <string name="draw_coin_count">提币数量</string>
    <string name="hint_withdraw_minAmount">最小提币数量%1$s%2$d</string>
    <string name="all_withdraw_amount">全部提币</string>
    <string name="all_transfer_amount">全部转账</string>
    <string name="reach_account_amount">到账数量</string>
    <string name="fee">手续费</string>
    <string name="withdraw_speedup">提币加速</string>
    <string name="exchange_speedup">交易加速</string>
    <string name="native_token">原生代币</string>
    <string name="no_native_token">跨链代币</string>
    <string name="native_test_token">原生测试代币</string>
    <string name="un_entrust">取消委托</string>
    <string name="status">状态</string>
    <string name="time">时间</string>
    <string name="consigner">委托人</string>
    <string name="transfer_in_ext">转入</string>
    <string name="transfer_out">转出</string>
    <string name="withdraw_income">提取收益</string>
    <string name="withdraw_share">提取分红</string>
    <string name="verifier">验证人</string>
    <string name="reminder">温馨提示</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="processing">处理中</string>
    <string name="add_coin">添加新资产</string>
    <string name="available">可用</string>
    <string name="reload_data">重新加载</string>
    <string name="hold_amount">当前持有</string>
    <string name="cross_chian_trans_in">跨链充币</string>
    <string name="cross_chian_trans_out">跨链提币</string>
    <string name="genarate_cross_address">生成跨链地址</string>
    <string name="hidden_small_token">隐藏小额币种</string>
    <string name="transfer_address">转账地址</string>
    <string name="transfer_amount">转账数量</string>
    <string name="crosslink_withdraw_tip">·您正在进行托管单元跨链提币\n·请务必使用跨链提币的提币通道\n·请务必确认提币地址是该币的原生公链地址</string>
    <string name="linkinner_withdraw_tip">·您正在进行托管单元链内转账\n·请务必使用链内的转账通道\n·请务必确认转账地址以 HBC 为开端</string>
    <string name="crosslink_withdraw_tip_1">·您正在进行托管单元跨链提币</string>
    <string name="crosslink_withdraw_tip_2">·请务必使用跨链提币的提币通道</string>
    <string name="crosslink_withdraw_tip_3">·请务必确认提币地址是该币的原生公链地址</string>
    <string name="linkinner_withdraw_tip_1">·您正在进行托管单元链内转账</string>
    <string name="linkinner_withdraw_tip_2">·请务必使用链内的转账通道</string>
    <string name="linkinner_withdraw_tip_3">·请务必确认转账地址以 HBC 为开端</string>
    <string name="transfer_fee">手续费</string>
    <string name="withdraw_fee">跨链手续费</string>
    <string name="BH_token">HBC</string>
    <string name="trusteeship_address">账户地址</string>
    <string name="address">地址</string>
    <string name="crosslink_make_address">跨链地址生成</string>
    <string name="crosslink_address">跨链地址</string>
    <string name="crosslink_deposit_address">跨链充值地址</string>
    <string name="cross_deposit">跨链充值</string>
    <string name="cross_withdraw">跨链提币</string>
    <string name="cross_deposit0">跨链充值</string>
    <string name="cross_withdraw0">跨链提币</string>
    <string name="crosslink_deposit_tip_2">·请提醒转出方，务必使用原生公链钱包提币</string>
    <string name="linkinner_deposit_tip_1">·您正在进行托管单元链内收款(充币)</string>
    <string name="linkinner_deposit_tip_2">·请提醒转出方，务必使用非跨链的提币通道</string>
    <string name="validator_create">创建</string>
    <string name="title_validator">验证人</string>
    <string name="tab_valid">有效</string>
    <string name="tab_invalid">无效</string>
    <string name="hint_validator_search">请输入验证人名称</string>
    <string name="voting_power_proportion">投票权</string>
    <string name="other_delegate_proportion">佣金率</string>
    <string name="self_delegate_proportion">自我委托</string>
    <string name="validate_node">验证节点</string>
    <string name="up_time">上线时间比重</string>
    <string name="update_time">更新时间</string>
    <string name="max_rate_limit">最大佣金限制</string>
    <string name="website">网站</string>
    <string name="detail">详情</string>
    <string name="do_entrust_tip">质押解锁周期为21天，请谨慎选择质押节点。</string>
    <string name="entrust_to">委托至</string>
    <string name="hint_input_validator">请输入验证人</string>
    <string name="hint_enter_entrust">请输入委托数量</string>
    <string name="hint_enter_relieve_delegate">请输入解委托数量</string>
    <string name="entrust_amount">委托数量</string>
    <string name="max_rate_change_limit">每天最大佣金变化限制</string>
    <string name="speedup">加速</string>
    <string name="string_placeholder">--</string>
    <string name="source_address">来源于</string>
    <string name="relieve_entrust_to">解委托至</string>
    <string name="real_entrust_amount">实际到账数量</string>
    <string name="relieve_entrust_amount">解委托数量</string>
    <string name="transfer_entrust_amount">转委托数量</string>
    <string name="do_entrust_succeed">委托成功</string>
    <string name="do_entrust_failed">委托失败</string>
    <string name="relieve_entrust_failed">解委托失败</string>
    <string name="relieve_entrust_succeed">解委托成功</string>
    <string name="transfer_entrust_succeed">转委托成功</string>
    <string name="transfer_entrust_failed">转委托失败</string>
    <string name="album">相册</string>
    <string name="langeuage_setting">语言设置中...</string>
    <string name="hint_input_token_name">请输入币种</string>
    <string name="all_asset">总资产</string>
    <string name="tips_backup">备份提示</string>
    <string name="tips_trust_success_index_1">·您将通过助记词备份钱包</string>
    <string name="tips_trust_success_index_2">·助记词为12个英文单词</string>
    <string name="tips_trust_success_index_3">·助记词可助您恢复钱包</string>
    <string name="tips_trust_success_index_4">·请务必牢记您的助记词</string>
    <string name="tips_trust_success_index_5">请勿通过邮箱、通讯工具分享您的助记词</string>
    <string name="error_mnemonic_form">助记词格式错误</string>
    <string name="error_mnemonic_checksum">助记词校验位错误</string>
    <string name="wallet_name">钱包名称</string>
    <string name="hint_confirm_password">请输入重复密码</string>
    <string name="create_fail">创建失败</string>
    <string name="copy_privatekey">复制私钥</string>
    <string name="backup_text_tip_1">离线保存</string>
    <string name="backup_text_tip_2">·切勿保存至邮箱、记事本、网盘、聊天工具等</string>
    <string name="backup_text_tip_3">·请勿使用网络传输</string>
    <string name="backup_text_tip_4">·请勿通过网络工具传输，一旦被黑客获取将造成不可挽回的资产损失</string>
    <string name="backup_text_tip_5">·建议离线设备通过扫二维码方式传输</string>
    <string name="backup_text_tip_6">·建议使用密码管理工具管理</string>
    <string name="tips_our_suggestion">我们建议</string>
    <string name="tips_trust_success_index_6">请勿将您的助记词轻易告知他人</string>
    <string name="tips_trust_success_index_7">请勿将助记词截屏、照相等方式保存于您的移动设备中</string>
</resources>