<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.activity.TrusteeshipSecActivity">

    <include layout="@layout/layout_toolbar"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_index_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/main_padding_right"
        android:paddingStart="@dimen/main_padding_left"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:text="@string/confirm_password"
        android:textColor="@color/main_text_black"
        android:textSize="26sp"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_index_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_index_1"
        android:text="@string/setup_3_to_3"
        android:includeFontPadding="false"
        android:textColor="@color/dark_blue"
        android:textSize="12sp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_index_1"
        android:layout_marginLeft="4dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/main_padding_right"
        android:paddingStart="@dimen/main_padding_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_index_1"
        android:layout_marginTop="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/set_pwd_tip_1"
            android:drawableLeft="@drawable/ic_dot_blue"
            android:drawablePadding="5dp"
            android:layout_marginLeft="3dp"
            android:lineSpacingExtra="5dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/set_pwd_tip_2"
            android:drawableLeft="@drawable/ic_dot_blue"
            android:drawablePadding="5dp"
            android:layout_marginLeft="3dp"
            android:lineSpacingExtra="5dp"
            android:layout_marginTop="3dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/set_pwd_tip_3"
            android:drawableLeft="@drawable/ic_dot_blue"
            android:drawablePadding="5dp"
            android:layout_marginLeft="3dp"
            android:lineSpacingExtra="5dp"
            android:layout_marginTop="3dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:textColor="@color/dark_blue"
            android:layout_marginBottom="4dp"
            android:text="@string/wallet_password"
            />

        <com.bhex.lib.uikit.widget.InputView
            android:id="@+id/inp_wallet_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textType="2"
            app:hint="@string/set_pwd_hint"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_password_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="3dp"
            android:layout_gravity="right"
            android:textColor="@color/dark_blue"
            tools:text="@string/pwd_index"
            />

        <CheckedTextView
            android:id="@+id/ck_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/checkbox_style"
            android:drawablePadding="4dp"
            android:textSize="14sp"
            android:textColor="@color/dark_blue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="我已阅读并同意《Bluehelix服务协议》"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            style="@style/main_btn_gray_disable"
            android:text="@string/wallet_create"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>