<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.TrusteeshipSuccessActivity">

    <androidx.appcompat.widget.Toolbar
        android:visibility="invisible"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:titleTextAppearance="@style/Toolbar_textsize">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/toolbar_layout_title_style"
            android:text="@string/password_create_success"
            tools:text="@string/password_create_success" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_index_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_trust_right"
            android:layout_gravity="center"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/password_create_success"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/main_text_black"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_index_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_index_1"
        app:layout_constraintBottom_toTopOf="@+id/layout_bottom"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:background="@drawable/frame_gray"
        android:layout_marginEnd="@dimen/main_padding_right"
        android:layout_marginStart="@dimen/main_padding_left"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/main_padding_left"
            android:paddingEnd="@dimen/main_padding_left"
            >


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:textColor="@color/main_text_black"
            android:textSize="16sp"
            android:text="@string/tips_backup"
            android:textStyle="normal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_1"
            android:drawablePadding="5dp"
            android:layout_marginLeft="3dp"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_2"
            android:drawablePadding="5dp"
            android:layout_marginLeft="5dp"
            android:lineSpacingExtra="3dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_3"
            android:drawableLeft="@drawable/ic_dot_blue"
            android:drawablePadding="5dp"
            android:layout_marginLeft="3dp"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_4"
            android:drawablePadding="5dp"
            android:layout_marginLeft="5dp"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/main_text_black"
            android:textSize="14sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="17dp"
            android:text="@string/tips_our_suggestion"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_5"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_6"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:text="@string/tips_trust_success_index_7"
            android:lineSpacingExtra="@dimen/main_line_spacing_extra"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_later_backup"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/main_btn_gray_b0bfdb"
            android:layout_marginStart="@dimen/main_margin_left"
            android:text="@string/later_backup"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_at_once_backup"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/main_btn_blue_44"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/main_margin_left"
            android:text="@string/at_once_backup"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>