<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bg"
    android:minHeight="50dp">

    <TextView
        android:id="@+id/title_auth_code"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:background="@color/app_bg"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/auth_code"
        android:textColor="@color/global_main_text_color"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_get_auth_code"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="18dp"
        android:background="@drawable/base_selector_bg_get_auth_code_orange"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/get_auth_code"
        android:textColor="@color/dark_bg_text_color"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_auth_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/title_auth_code"
        android:layout_toStartOf="@id/tv_get_auth_code"
        android:background="@color/app_bg"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/import_auth_code"
        android:inputType="number"
        android:paddingEnd="8dp"
        android:paddingStart="0dp"
        android:textColor="@color/global_main_text_color"
        android:textColorHint="@color/global_input_hint_color"
        android:textSize="14sp" />

</RelativeLayout>
